Feat: Add hero section to html.

--- a/src/template.html
+++ b/src/template.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <header class="page-header">
-        <div class="logo">My Restaurant Name</div>
+        <div class="logo">Restaurant</div>
         <nav class="nav-menu">
             <button>Home</button>
             <button>Menu</button>
@@ -17,9 +17,16 @@
         <div class="phone-number">+44 xx xxx xxx</div>
         <img src="assets/menu.svg" class="menu-icon" alt="menu">
     </header>
-    <div id="content">
+    <div class="content">
         <div class="hero">
-            
+            <div class="image-wrapper">
+                <img src="assets/heroImage.jpg" class="hero-image" alt="food">
+                <div class="text-box">
+                    <div>Savor the Art of </div>
+                    <div>MODERN DINING</div>
+                    <div>Experience the vibrant flavors of India with a contemporary twist. From bold spices to fresh, locally-sourced ingredients, our dishes honor tradition while embracing modern culinary creativity.</div>
+                </div>
+            </div>
         </div>
         <div class="book-table">
 
