feat: Add arrows to the hero of homepage.

--- a/src/template.html
+++ b/src/template.html
@@ -19,6 +19,7 @@
     </header>
     <div class="content">
         <div class="hero">
+            <img class="arrow-left" src="assets/chevron-left.svg" alt="arrow left"> 
             <div class="image-wrapper">
                 <img src="assets/heroImage.jpg" class="hero-image" alt="food">
                 <div class="text-box">
@@ -27,6 +28,7 @@
                     <div>Experience the vibrant flavors of India with a contemporary twist. From bold spices to fresh, locally-sourced ingredients, our dishes honor tradition while embracing modern culinary creativity.</div>
                 </div>
             </div>
+            <img class="arrow-right" src="assets/chevron-right.svg" alt="arrow right">
         </div>
         <div class="book-table">
 
