feat: Add booking section to homepage.

--- a/src/template.html
+++ b/src/template.html
@@ -30,8 +30,8 @@
             </div>
             <img class="arrow-right" src="assets/chevron-right.svg" alt="arrow right">
         </div>
-        <div class="book-table">
-
+        <div class="book-table-container">
+            <div class="book-table-button">BOOK A TABLE</div>
         </div>
     </div>
 </body>
